crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__precedence.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/precedence.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 14] Error at '==': ambiguous precedences for operators `==` and `<`
